internal/parser/chroniclelogstash_parser.go
// Code generated from ChronicleLogstashParser.g4 by ANTLR 4.13.1. DO NOT EDIT.

package parser // ChronicleLogstashParser

import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type ChronicleLogstashParser struct {
	*antlr.BaseParser
}

var ChronicleLogstashParserParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func chroniclelogstashparserParserInit() {
	staticData := &ChronicleLogstashParserParserStaticData
	staticData.LiteralNames = []string{
		"", "", "", "'if'", "'else if'", "'else'", "'for'", "", "'not'", "",
		"'}'", "'['", "']'", "'('", "')'", "", "','", "'!'", "", "'=='", "'!='",
		"'<'", "'>'", "'<='", "'>='", "'=~'", "'!~'",
	}
	staticData.SymbolicNames = []string{
		"", "WS", "COMMENT", "IF", "ELSEIF", "ELSE", "FOR", "IN", "NOT", "LBRACE",
		"RBRACE", "LBRACKET", "RBRACKET", "LPAREN", "RPAREN", "KVSEPARATOR",
		"COMMA", "BOOLNOT", "MATHOP", "EQUAL", "NOTEQUAL", "LESSTHAN", "GREATERTHAN",
		"LTEQUAL", "GTEQUAL", "MATCH", "NOTMATCH", "AND", "OR", "BOOLEAN", "STRING",
		"REGEX", "IFSTATEMENTID", "ID", "NUMBER", "FORWS", "FORCOMMA", "FORIN",
		"FORID", "FOROPENER",
	}
	staticData.RuleNames = []string{
		"filterblock", "conditionalblock", "for_var", "for_iterable", "statement",
		"expression", "unary_expression", "binary_expression", "expression_val",
		"signed_number", "paren_list", "paren_value", "math_statement", "math_expression",
		"boolean_op", "boolean_eval", "plugin", "keyvalue", "kv_lvalue", "kv_rvalue",
		"hash", "list", "if_list", "list_value",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// ChronicleLogstashParserInit initializes any static state used to implement ChronicleLogstashParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewChronicleLogstashParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func ChronicleLogstashParserInit() {
	staticData := &ChronicleLogstashParserParserStaticData
	staticData.once.Do(chroniclelogstashparserParserInit)
}

// NewChronicleLogstashParser produces a new parser instance for the optional input antlr.TokenStream.
func NewChronicleLogstashParser(input antlr.TokenStream) *ChronicleLogstashParser {
	ChronicleLogstashParserInit()
	this := new(ChronicleLogstashParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &ChronicleLogstashParserParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "ChronicleLogstashParser.g4"

	return this
}

// ChronicleLogstashParser tokens.
const (
	ChronicleLogstashParserEOF           = antlr.TokenEOF
	ChronicleLogstashParserWS            = 1
	ChronicleLogstashParserCOMMENT       = 2
	ChronicleLogstashParserIF            = 3
	ChronicleLogstashParserELSEIF        = 4
	ChronicleLogstashParserELSE          = 5
	ChronicleLogstashParserFOR           = 6
	ChronicleLogstashParserIN            = 7
	ChronicleLogstashParserNOT           = 8
	ChronicleLogstashParserLBRACE        = 9
	ChronicleLogstashParserRBRACE        = 10
	ChronicleLogstashParserLBRACKET      = 11
	ChronicleLogstashParserRBRACKET      = 12
	ChronicleLogstashParserLPAREN        = 13
	ChronicleLogstashParserRPAREN        = 14
	ChronicleLogstashParserKVSEPARATOR   = 15
	ChronicleLogstashParserCOMMA         = 16
	ChronicleLogstashParserBOOLNOT       = 17
	ChronicleLogstashParserMATHOP        = 18
	ChronicleLogstashParserEQUAL         = 19
	ChronicleLogstashParserNOTEQUAL      = 20
	ChronicleLogstashParserLESSTHAN      = 21
	ChronicleLogstashParserGREATERTHAN   = 22
	ChronicleLogstashParserLTEQUAL       = 23
	ChronicleLogstashParserGTEQUAL       = 24
	ChronicleLogstashParserMATCH         = 25
	ChronicleLogstashParserNOTMATCH      = 26
	ChronicleLogstashParserAND           = 27
	ChronicleLogstashParserOR            = 28
	ChronicleLogstashParserBOOLEAN       = 29
	ChronicleLogstashParserSTRING        = 30
	ChronicleLogstashParserREGEX         = 31
	ChronicleLogstashParserIFSTATEMENTID = 32
	ChronicleLogstashParserID            = 33
	ChronicleLogstashParserNUMBER        = 34
	ChronicleLogstashParserFORWS         = 35
	ChronicleLogstashParserFORCOMMA      = 36
	ChronicleLogstashParserFORIN         = 37
	ChronicleLogstashParserFORID         = 38
	ChronicleLogstashParserFOROPENER     = 39
)

// ChronicleLogstashParser rules.
const (
	ChronicleLogstashParserRULE_filterblock       = 0
	ChronicleLogstashParserRULE_conditionalblock  = 1
	ChronicleLogstashParserRULE_for_var           = 2
	ChronicleLogstashParserRULE_for_iterable      = 3
	ChronicleLogstashParserRULE_statement         = 4
	ChronicleLogstashParserRULE_expression        = 5
	ChronicleLogstashParserRULE_unary_expression  = 6
	ChronicleLogstashParserRULE_binary_expression = 7
	ChronicleLogstashParserRULE_expression_val    = 8
	ChronicleLogstashParserRULE_signed_number     = 9
	ChronicleLogstashParserRULE_paren_list        = 10
	ChronicleLogstashParserRULE_paren_value       = 11
	ChronicleLogstashParserRULE_math_statement    = 12
	ChronicleLogstashParserRULE_math_expression   = 13
	ChronicleLogstashParserRULE_boolean_op        = 14
	ChronicleLogstashParserRULE_boolean_eval      = 15
	ChronicleLogstashParserRULE_plugin            = 16
	ChronicleLogstashParserRULE_keyvalue          = 17
	ChronicleLogstashParserRULE_kv_lvalue         = 18
	ChronicleLogstashParserRULE_kv_rvalue         = 19
	ChronicleLogstashParserRULE_hash              = 20
	ChronicleLogstashParserRULE_list              = 21
	ChronicleLogstashParserRULE_if_list           = 22
	ChronicleLogstashParserRULE_list_value        = 23
)

// IFilterblockContext is an interface to support dynamic dispatch.
type IFilterblockContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	ID() antlr.TerminalNode
	LBRACE() antlr.TerminalNode
	RBRACE() antlr.TerminalNode
	EOF() antlr.TerminalNode
	AllPlugin() []IPluginContext
	Plugin(i int) IPluginContext
	AllConditionalblock() []IConditionalblockContext
	Conditionalblock(i int) IConditionalblockContext

	// IsFilterblockContext differentiates from other interfaces.
	IsFilterblockContext()
}

type FilterblockContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyFilterblockContext() *FilterblockContext {
	var p = new(FilterblockContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ChronicleLogstashParserRULE_filterblock
	return p
}

func InitEmptyFilterblockContext(p *FilterblockContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ChronicleLogstashParserRULE_filterblock
}

func (*FilterblockContext) IsFilterblockContext() {}

func NewFilterblockContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *FilterblockContext {
	var p = new(FilterblockContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = ChronicleLogstashParserRULE_filterblock

	return p
}

func (s *FilterblockContext) GetParser() antlr.Parser { return s.parser }

func (s *FilterblockContext) ID() antlr.TerminalNode {
	return s.GetToken(ChronicleLogstashParserID, 0)
}

func (s *FilterblockContext) LBRACE() antlr.TerminalNode {
	return s.GetToken(ChronicleLogstashParserLBRACE, 0)
}

func (s *FilterblockContext) RBRACE() antlr.TerminalNode {
	return s.GetToken(ChronicleLogstashParserRBRACE, 0)
}

func (s *FilterblockContext) EOF() antlr.TerminalNode {
	return s.GetToken(ChronicleLogstashParserEOF, 0)
}

func (s *FilterblockContext) AllPlugin() []IPluginContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IPluginContext); ok {
			len++
		}
	}

	tst := make([]IPluginContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IPluginContext); ok {
			tst[i] = t.(IPluginContext)
			i++
		}
	}

	return tst
}

func (s *FilterblockContext) Plugin(i int) IPluginContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IPluginContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IPluginContext)
}

func (s *FilterblockContext) AllConditionalblock() []IConditionalblockContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IConditionalblockContext); ok {
			len++
		}
	}

	tst := make([]IConditionalblockContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IConditionalblockContext); ok {
			tst[i] = t.(IConditionalblockContext)
			i++
		}
	}

	return tst
}

func (s *FilterblockContext) Conditionalblock(i int) IConditionalblockContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IConditionalblockContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IConditionalblockContext)
}

func (s *FilterblockContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *FilterblockContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *FilterblockContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ChronicleLogstashParserListener); ok {
		listenerT.EnterFilterblock(s)
	}
}

func (s *FilterblockContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ChronicleLogstashParserListener); ok {
		listenerT.ExitFilterblock(s)
	}
}

func (p *ChronicleLogstashParser) Filterblock() (localctx IFilterblockContext) {
	localctx = NewFilterblockContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, ChronicleLogstashParserRULE_filterblock)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(48)
		p.Match(ChronicleLogstashParserID)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(49)
		p.Match(ChronicleLogstashParserLBRACE)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	p.SetState(54)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for (int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&8589934712) != 0 {
		p.SetState(52)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}

		switch p.GetTokenStream().LA(1) {
		case ChronicleLogstashParserID:
			{
				p.SetState(50)
				p.Plugin()
			}

		case ChronicleLogstashParserIF, ChronicleLogstashParserELSEIF, ChronicleLogstashParserELSE, ChronicleLogstashParserFOR:
			{
				p.SetState(51)
				p.Conditionalblock()
			}

		default:
			p.SetError(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
			goto errorExit
		}

		p.SetState(56)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(57)
		p.Match(ChronicleLogstashParserRBRACE)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(58)
		p.Match(ChronicleLogstashParserEOF)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IConditionalblockContext is an interface to support dynamic dispatch.
type IConditionalblockContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Statement() IStatementContext
	LBRACE() antlr.TerminalNode
	RBRACE() antlr.TerminalNode
	IF() antlr.TerminalNode
	ELSEIF() antlr.TerminalNode
	AllPlugin() []IPluginContext
	Plugin(i int) IPluginContext
	AllConditionalblock() []IConditionalblockContext
	Conditionalblock(i int) IConditionalblockContext
	ELSE() antlr.TerminalNode
	FOR() antlr.TerminalNode
	AllFor_var() []IFor_varContext
	For_var(i int) IFor_varContext
	FORIN() antlr.TerminalNode
	For_iterable() IFor_iterableContext
	FOROPENER() antlr.TerminalNode
	FORCOMMA() antlr.TerminalNode

	// IsConditionalblockContext differentiates from other interfaces.
	IsConditionalblockContext()
}

type ConditionalblockContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyConditionalblockContext() *ConditionalblockContext {
	var p = new(ConditionalblockContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ChronicleLogstashParserRULE_conditionalblock
	return p
}

func InitEmptyConditionalblockContext(p *ConditionalblockContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ChronicleLogstashParserRULE_conditionalblock
}

func (*ConditionalblockContext) IsConditionalblockContext() {}

func NewConditionalblockContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ConditionalblockContext {
	var p = new(ConditionalblockContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = ChronicleLogstashParserRULE_conditionalblock

	return p
}

func (s *ConditionalblockContext) GetParser() antlr.Parser { return s.parser }

func (s *ConditionalblockContext) Statement() IStatementContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IStatementContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IStatementContext)
}

func (s *ConditionalblockContext) LBRACE() antlr.TerminalNode {
	return s.GetToken(ChronicleLogstashParserLBRACE, 0)
}

func (s *ConditionalblockContext) RBRACE() antlr.TerminalNode {
	return s.GetToken(ChronicleLogstashParserRBRACE, 0)
}

func (s *ConditionalblockContext) IF() antlr.TerminalNode {
	return s.GetToken(ChronicleLogstashParserIF, 0)
}

func (s *ConditionalblockContext) ELSEIF() antlr.TerminalNode {
	return s.GetToken(ChronicleLogstashParserELSEIF, 0)
}

func (s *ConditionalblockContext) AllPlugin() []IPluginContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IPluginContext); ok {
			len++
		}
	}

	tst := make([]IPluginContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IPluginContext); ok {
			tst[i] = t.(IPluginContext)
			i++
		}
	}

	return tst
}

func (s *ConditionalblockContext) Plugin(i int) IPluginContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IPluginContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IPluginContext)
}

func (s *ConditionalblockContext) AllConditionalblock() []IConditionalblockContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IConditionalblockContext); ok {
			len++
		}
	}

	tst := make([]IConditionalblockContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IConditionalblockContext); ok {
			tst[i] = t.(IConditionalblockContext)
			i++
		}
	}

	return tst
}

func (s *ConditionalblockContext) Conditionalblock(i int) IConditionalblockContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IConditionalblockContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IConditionalblockContext)
}

func (s *ConditionalblockContext) ELSE() antlr.TerminalNode {
	return s.GetToken(ChronicleLogstashParserELSE, 0)
}

func (s *ConditionalblockContext) FOR() antlr.TerminalNode {
	return s.GetToken(ChronicleLogstashParserFOR, 0)
}

func (s *ConditionalblockContext) AllFor_var() []IFor_varContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IFor_varContext); ok {
			len++
		}
	}

	tst := make([]IFor_varContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IFor_varContext); ok {
			tst[i] = t.(IFor_varContext)
			i++
		}
	}

	return tst
}

func (s *ConditionalblockContext) For_var(i int) IFor_varContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFor_varContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFor_varContext)
}

func (s *ConditionalblockContext) FORIN() antlr.TerminalNode {
	return s.GetToken(ChronicleLogstashParserFORIN, 0)
}

func (s *ConditionalblockContext) For_iterable() IFor_iterableContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFor_iterableContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFor_iterableContext)
}

func (s *ConditionalblockContext) FOROPENER() antlr.TerminalNode {
	return s.GetToken(ChronicleLogstashParserFOROPENER, 0)
}

func (s *ConditionalblockContext) FORCOMMA() antlr.TerminalNode {
	return s.GetToken(ChronicleLogstashParserFORCOMMA, 0)
}

func (s *ConditionalblockContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ConditionalblockContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ConditionalblockContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ChronicleLogstashParserListener); ok {
		listenerT.EnterConditionalblock(s)
	}
}

func (s *ConditionalblockContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ChronicleLogstashParserListener); ok {
		listenerT.ExitConditionalblock(s)
	}
}

func (p *ChronicleLogstashParser) Conditionalblock() (localctx IConditionalblockContext) {
	localctx = NewConditionalblockContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, ChronicleLogstashParserRULE_conditionalblock)
	var _la int

	p.SetState(100)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetTokenStream().LA(1) {
	case ChronicleLogstashParserIF, ChronicleLogstashParserELSEIF:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(60)
			_la = p.GetTokenStream().LA(1)

			if !(_la == ChronicleLogstashParserIF || _la == ChronicleLogstashParserELSEIF) {
				p.GetErrorHandler().RecoverInline(p)
			} else {
				p.GetErrorHandler().ReportMatch(p)
				p.Consume()
			}
		}
		{
			p.SetState(61)
			p.statement(0)
		}
		{
			p.SetState(62)
			p.Match(ChronicleLogstashParserLBRACE)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		p.SetState(67)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)

		for (int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&8589934712) != 0 {
			p.SetState(65)
			p.GetErrorHandler().Sync(p)
			if p.HasError() {
				goto errorExit
			}

			switch p.GetTokenStream().LA(1) {
			case ChronicleLogstashParserID:
				{
					p.SetState(63)
					p.Plugin()
				}

			case ChronicleLogstashParserIF, ChronicleLogstashParserELSEIF, ChronicleLogstashParserELSE, ChronicleLogstashParserFOR:
				{
					p.SetState(64)
					p.Conditionalblock()
				}

			default:
				p.SetError(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
				goto errorExit
			}

			p.SetState(69)
			p.GetErrorHandler().Sync(p)
			if p.HasError() {
				goto errorExit
			}
			_la = p.GetTokenStream().LA(1)
		}
		{
			p.SetState(70)
			p.Match(ChronicleLogstashParserRBRACE)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	case ChronicleLogstashParserELSE:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(72)
			p.Match(ChronicleLogstashParserELSE)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(73)
			p.Match(ChronicleLogstashParserLBRACE)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		p.SetState(78)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)

		for (int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&8589934712) != 0 {
			p.SetState(76)
			p.GetErrorHandler().Sync(p)
			if p.HasError() {
				goto errorExit
			}

			switch p.GetTokenStream().LA(1) {
			case ChronicleLogstashParserID:
				{
					p.SetState(74)
					p.Plugin()
				}

			case ChronicleLogstashParserIF, ChronicleLogstashParserELSEIF, ChronicleLogstashParserELSE, ChronicleLogstashParserFOR:
				{
					p.SetState(75)
					p.Conditionalblock()
				}

			default:
				p.SetError(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
				goto errorExit
			}

			p.SetState(80)
			p.GetErrorHandler().Sync(p)
			if p.HasError() {
				goto errorExit
			}
			_la = p.GetTokenStream().LA(1)
		}
		{
			p.SetState(81)
			p.Match(ChronicleLogstashParserRBRACE)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	case ChronicleLogstashParserFOR:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(82)
			p.Match(ChronicleLogstashParserFOR)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(83)
			p.For_var()
		}
		p.SetState(86)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)

		if _la == ChronicleLogstashParserFORCOMMA {
			{
				p.SetState(84)
				p.Match(ChronicleLogstashParserFORCOMMA)
				if p.HasError() {
					// Recognition error - abort rule
					goto errorExit
				}
			}
			{
				p.SetState(85)
				p.For_var()
			}

		}
		{
			p.SetState(88)
			p.Match(ChronicleLogstashParserFORIN)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(89)
			p.For_iterable()
		}
		{
			p.SetState(90)
			p.Match(ChronicleLogstashParserFOROPENER)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		p.SetState(95)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)

		for (int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&8589934712) != 0 {
			p.SetState(93)
			p.GetErrorHandler().Sync(p)
			if p.HasError() {
				goto errorExit
			}

			switch p.GetTokenStream().LA(1) {
			case ChronicleLogstashParserID:
				{
					p.SetState(91)
					p.Plugin()
				}

			case ChronicleLogstashParserIF, ChronicleLogstashParserELSEIF, ChronicleLogstashParserELSE, ChronicleLogstashParserFOR:
				{
					p.SetState(92)
					p.Conditionalblock()
				}

			default:
				p.SetError(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
				goto errorExit
			}

			p.SetState(97)
			p.GetErrorHandler().Sync(p)
			if p.HasError() {
				goto errorExit
			}
			_la = p.GetTokenStream().LA(1)
		}
		{
			p.SetState(98)
			p.Match(ChronicleLogstashParserRBRACE)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	default:
		p.SetError(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IFor_varContext is an interface to support dynamic dispatch.
type IFor_varContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	FORID() antlr.TerminalNode
	FORIN() antlr.TerminalNode

	// IsFor_varContext differentiates from other interfaces.
	IsFor_varContext()
}

type For_varContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyFor_varContext() *For_varContext {
	var p = new(For_varContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ChronicleLogstashParserRULE_for_var
	return p
}

func InitEmptyFor_varContext(p *For_varContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ChronicleLogstashParserRULE_for_var
}

func (*For_varContext) IsFor_varContext() {}

func NewFor_varContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *For_varContext {
	var p = new(For_varContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = ChronicleLogstashParserRULE_for_var

	return p
}

func (s *For_varContext) GetParser() antlr.Parser { return s.parser }

func (s *For_varContext) FORID() antlr.TerminalNode {
	return s.GetToken(ChronicleLogstashParserFORID, 0)
}

func (s *For_varContext) FORIN() antlr.TerminalNode {
	return s.GetToken(ChronicleLogstashParserFORIN, 0)
}

func (s *For_varContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *For_varContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *For_varContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ChronicleLogstashParserListener); ok {
		listenerT.EnterFor_var(s)
	}
}

func (s *For_varContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ChronicleLogstashParserListener); ok {
		listenerT.ExitFor_var(s)
	}
}
